feat: support multiple authors (group work) and eliminate submission title
